# Pracken

./: .env.local  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  vcpkg-configuration.json  vcpkg.json
assets/: Blank_Card.aseprite  Symbols.aseprite
assets/cards/: 2OfClubs.aseprite  JokerBlack.aseprite  JokerRed.aseprite
src/: main.c
src/components/: augmentation.c  augmentation.h  cards.h
src/config/: graphics_config.h
src/entities/: board.c  board.h  player.c  player.h
src/platform/: display_desktop.c  display_embedded.c  platform_display.h
src/platform/win32/: windows_display.c  windows_display.h  windows_setup.c  windows_setup.h
src/systems/: cardsystem.c  cardsystem.h  combatsystem.c  combatsystem.h  graphicssystem.c  graphicssystem.h  inputssystem.h
src/utils/: random.c  random.h
